# PhoenixGameEngine

./: .gitignore  CMakeLists.txt  README.md  clean.sh  imgui.ini
config/: assets.txt  map.txt
dependencies/: CMakeLists.txt
dependencies/sfml/: CMakeLists.txt
src/: CMakeLists.txt  ExampleScene.h  Intro.cpp  Intro.h  TestGame.cpp  TestGame.h  main.cpp
src/Animation/: Animation.cpp  Animation.h
src/Assets/: Game.config
src/Components/: Components.h
src/Engine/Animation/: Animation.cpp  Animation.h
src/Engine/Components/: Components.h
src/Engine/Entity/: Entity.cpp  Entity.h  EntityManager.h
src/Engine/Game/: Assets.cpp  Assets.h  GameEngine.cpp  GameEngine.h
src/Engine/LevelEditor/: Editor.cpp  Editor.h
src/Engine/Physics/: Physics.cpp  Physics.h
src/Engine/Scene/: Default_Scene.cpp  Default_Scene.h  Scene.cpp  Scene.h  Scene_Play.cpp  Scene_Play.h
src/Engine/Tilemap/: Tilemap.cpp  Tilemap.h
src/Entity/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
src/Game/: Action.cpp  Action.h  Assets.h  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  GeometryWars.cpp  Scene.h
src/Physics/: Physics.h
src/Scene/: Scene.cpp  Scene.h  Scene_Play.cpp  Scene_Play.h
src/Vec2/: Vec2.cpp  Vec2.h
src/Version-1.0/Components/: Components.h
src/Version-1.0/SampleGame/: GeometryWars.h
