add_executable(main main.cpp
                    Intro.cpp
                    TestGame.cpp
                    ExampleScene.cpp
                    Engine/Game/GameEngine.cpp
                    Engine/Game/Assets.cpp
                    Engine/Vec2/Vec2.cpp
                    Engine/Tilemap/Tilemap.cpp
                    Engine/Entity/Entity.cpp
                    Engine/Entity/EntityManager.cpp
                    Engine/Animation/Animation.cpp
                    Engine/Action/Action.cpp
                    Engine/Physics/Physics.cpp
                    Engine/Scene/Scene.cpp
                    Engine/LevelEditor/Editor.cpp
)